--- a/try3/Makefile
+++ b/try3/Makefile
@@ -1,32 +1,19 @@
 # makfile configuration
-COMMON_OBJECTS  = 
-CPU             = msp430g2553
-CFLAGS          = -mmcu=${CPU} -I../h
-LDFLAGS		= -L/opt/ti/msp430_gcc/include
+CPU             	= msp430g2553
+CFLAGS          	= -mmcu=${CPU} -Os -I../h
+LDFLAGS		= -L../lib -L/opt/ti/msp430_gcc/include/ 
 
 #switch the compiler (for the internal make rules)
 CC              = msp430-elf-gcc
-AS              = msp430-elf-as
+AS              = msp430-elf-gcc -mmcu=${CPU} -c
 
-all: libShape.a button.elf pong2.elf
-
-libShape.a: $(OBJECTS)
-	$(AR) crs $@ $^
-
-$(OBJECTS): shape.h
-
-install: libShape.a
-	mkdir -p ../h ../lib
-	mv $^ ../lib
-	cp *.h ../h
+all:button.elf pong2.elf
 
 #additional rules for files
 
-#button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led3.o switches3.o buzzer3.o buttonCode.o ../lib/libTimer.a ${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
-
- button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led3.o switches3.o buzzer3.o buttonCode.o ../lib/libTimer.a 
-    ${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
- pong2.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led3.o switches3.o buzzer3.o main.o pongstartscreen.o ../lib/libTimer.a ${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
+button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led3.o switches3.o buzzer3.o buttonCode.o ../lib/libTimer.a  ${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
+ 
+pong2.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led3.o switches3.o buzzer3.o main.o pongstartscreen.o ../lib/libTimer.a ${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
   
     
 load: button.elf
@@ -36,4 +23,10 @@ load2: pong2.elf
 
 clean:
 	rm -f libShape.a *.o *.elf
+
+load: shapemotion.elf
+	mspdebug rf2500 "prog $^"
+
+clean:
+	rm -f *.o *.elf
 
