--- a/p2swLib/Makefile
+++ b/p2swLib/Makefile
@@ -7,7 +7,7 @@ LDFLAGS		= -L../lib -L/opt/ti/msp430_gcc/include/
 #switch the compiler (for the internal make rules)
 CC              = msp430-elf-gcc
 AS              = msp430-elf-as
-AR              = msp430-elf-ar
+AR              = msp430-elf-ar -mmcu=${CPU} -c
 
 OBJECTS         = p2switches.o
 
@@ -25,8 +25,14 @@ clean:
 	rm -f *.a *.o *.elf
 
 p2sw-demo.elf: p2sw-demo.o ../lib/libp2sw.a tiltscreen.o wdt_handler.o
-	$(CC) $(CFLAGS) ${LDFLAGS} -o $@ $^ -lLcd -lp2sw -lTime -lShape -lCircle
+	$(CC) $(CFLAGS) ${LDFLAGS} -o $@ $^ -lLcd  -lTimer -lShape -lCircle
 
 load: switch_demo.elf
+	mspdebug rf2500 "prog $^"
+
+shapemotion.elf: shapemotion.o ../lib/libp2sw.a tiltscreen.o wdt_handler.o
+	$(CC) $(CFLAGS) ${LDFLAGS} -o $@ $^ -lLcd  -lTimer -lShape -lCircle
+
+loadm: shapemotion.elf
 	mspdebug rf2500 "prog $^"
 
